# fastapi_rust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  EXISTING_FASTAPI_STRUCTURE.md  PROPOSED_RUST_ARCHITECTURE.md  README.md  UPGRADE_LOG.md
.beads/: issues.jsonl
.beads/.br_history/: issues.20260119_011915.jsonl
.cargo/: config.toml  config.toml.example
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  nightly.yml  release.yml
crates/fastapi/: Cargo.toml
crates/fastapi-core/: Cargo.toml
crates/fastapi-core/src/: api_router.rs  app.rs  context.rs  coverage.rs  dependency.rs  digest.rs  docs.rs  error.rs  extract.rs  lib.rs  loadtest.rs  logging.rs  middleware.rs  multipart.rs  password.rs  proptest.rs  request.rs  response.rs  routing.rs  shutdown.rs  sse.rs  static_files.rs  testing.rs  validation.rs  versioning.rs  websocket.rs
crates/fastapi-core/tests/: integration_tests.rs  response_handling.rs  validate_derive.rs
crates/fastapi-http/: Cargo.toml
crates/fastapi-http/benches/: http_parser.rs
crates/fastapi-http/src/: body.rs  connection.rs  expect.rs  http2.rs  lib.rs  multipart.rs  parser.rs  query.rs  range.rs  response.rs  server.rs  streaming.rs  websocket.rs
crates/fastapi-http/tests/: http2.rs  request_timeout.rs  security.rs  websocket.rs
crates/fastapi-macros/: Cargo.toml
crates/fastapi-macros/src/: lib.rs  openapi.rs  param.rs  route.rs  validate.rs
crates/fastapi-openapi/: Cargo.toml
crates/fastapi-openapi/src/: lib.rs  schema.rs  spec.rs
crates/fastapi-openapi/tests/: enum_schema.rs  openapi_generation.rs
crates/fastapi-output/: Cargo.toml
crates/fastapi-output/src/: debug.rs  detection.rs  facade.rs  lib.rs  mode.rs  testing.rs  themes.rs
crates/fastapi-output/src/components/: banner.rs  dependency_tree.rs  errors.rs  help_display.rs  http_inspector.rs  logging.rs  middleware_stack.rs  mod.rs  openapi_display.rs  routes.rs  routing_debug.rs  shutdown_progress.rs  test_results.rs
crates/fastapi-output/src/testing/: fixtures.rs
crates/fastapi-output/tests/: integration_app_lifecycle.rs
crates/fastapi-router/: Cargo.toml
crates/fastapi-router/src/: lib.rs  match.rs  registry.rs  trie.rs
crates/fastapi/examples/: README.md  auth_example.rs  crud_api.rs  demo_api.rs  getting_started.rs  hello_world.rs
crates/fastapi/src/: lib.rs
docs/: getting-started.md
docs/guide/: configuration.md  dependency-injection.md  deployment.md  error-handling.md  index.md  middleware.md  openapi.md  request-handling.md  response-building.md  routing.md  security.md  testing.md
