[package]
name = "fastapi-http"
description = "Zero-copy HTTP/1.1 parser for fastapi_rust"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fastapi-core = { workspace = true }
asupersync = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "http_parser"
harness = false

[lints]
workspace = true
