[package]
name = "fastapi-openapi"
description = "OpenAPI 3.1 types and schema generation for fastapi_rust"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/fastapi-openapi"
readme = "../../README.md"
keywords = ["openapi", "schema", "fastapi", "json-schema", "spec"]
categories = ["web-programming", "data-structures"]

[dependencies]
fastapi-core = { workspace = true }
fastapi-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
fastapi-macros = { workspace = true }

[lints]
workspace = true
